tests/adapters/snapshots/main__adapters__tool_schema__gemini_unsupported_schema_1.snap
---
source: tests/adapters/tool_schema.rs
expression: snapshot
---
{
  "properties": {
    "date": {
      "format": "date-time",
      "type": "string"
    },
    "name": {
      "type": "string"
    }
  },
  "type": "object"
}
