tests/adapters/snapshots/main__adapters__tool_schema__gemini_unsupported_schema_2.snap
---
source: tests/adapters/tool_schema.rs
expression: snapshot
---
{
  "properties": {
    "details": {
      "properties": {
        "age": {
          "type": "integer"
        },
        "city": {
          "type": "string"
        },
        "street": {
          "type": "string"
        }
      },
      "type": "object"
    },
    "name": {
      "type": "string"
    }
  },
  "title": "User",
  "type": "object"
}
